omnitron-rpc/tests/compile_fail/tarpc_service_fn_serve.rs
#[omnitron_rpc::service]
trait World {
    async fn serve();
}

fn main() {}
